fix: break on en/ru change language key prevents continue of the initialization

--- a/movie-search/src/components/main-component/main-component.scss
+++ b/movie-search/src/components/main-component/main-component.scss
@@ -386,7 +386,9 @@
 }
 
 .section-keyboard .keyboard .row-a .key[data-keycode="Fn"] {
-  background-repeat: no-repeat;
-  background-size: 130%;
-  background-position: center;
+  background: {
+    repeat: no-repeat;
+    position: center;
+    size: 130%;
+  }
 }
